--- a/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
+++ b/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="Source Files\GlobalCode">
       <UniqueIdentifier>{96a2085a-bee7-47c9-b291-db3b059bf2ad}</UniqueIdentifier>
     </Filter>
+    <Filter Include="TSL">
+      <UniqueIdentifier>{aeadce5e-4f69-4c63-98f4-c0e7db367732}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TreeCtrlPage.cpp">
@@ -89,18 +92,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="$(CPPSource)\tsl\ordered_map.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="$(CPPSource)\tsl\ordered_set.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_QuadVector\QuadVector.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_QuadVector\QuadVectorFunctions.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="$(CPPSource)\GlobalCode_StringFunctions\StringFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -117,9 +108,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="$(CPPSource)\GlobalCode_VariableLists\VariableVectorFunctions.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="$(CPPSource)\tsl\ordered_hash.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="$(CPPSource)\GlobalCode_NodeTrees\VariableData.h">
@@ -206,9 +194,6 @@
     <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\MultiViewApp.h">
       <Filter>MultiView</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\DLG_TreeNodeText.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\TreePage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -221,11 +206,26 @@
     <ClInclude Include="$(CPPSource)\DLLAPI.h">
       <Filter>Header Files\GlobalCode</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_IniData\OrderedIniData.h">
-      <Filter>Header Files\GlobalCode</Filter>
-    </ClInclude>
     <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\TreePageNode.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(CPPSource)\GlobalCode_QuadVector\QuadVector.h">
+      <Filter>Header Files\GlobalCode</Filter>
+    </ClInclude>
+    <ClInclude Include="$(CPPSource)\GlobalCode_QuadVector\QuadVectorFunctions.h">
+      <Filter>Header Files\GlobalCode</Filter>
+    </ClInclude>
+    <ClInclude Include="$(CPPSource)\tsl\ordered_map.h">
+      <Filter>TSL</Filter>
+    </ClInclude>
+    <ClInclude Include="$(CPPSource)\tsl\ordered_hash.h">
+      <Filter>TSL</Filter>
+    </ClInclude>
+    <ClInclude Include="$(CPPSource)\tsl\ordered_set.h">
+      <Filter>TSL</Filter>
+    </ClInclude>
+    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\DLG_TreeNodeText.h">
+      <Filter>NodeTreeStuff</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
