--- a/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
+++ b/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
@@ -39,61 +39,61 @@
     <ClCompile Include="TreeCtrlPage.cpp">
       <Filter>MultiView</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\GlobalCode_NodeTrees\VariableData.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\GlobalCode_NodeTrees\VariableData.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\PagedMultiviewTreeControl\MainFrm.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\MainFrm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\PagedMultiviewTreeControl\MultiViewDoc.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\MultiViewDoc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\PagedMultiviewTreeControl\OtherView.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\OtherView.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\PagedMultiviewTreeControl\MultiviewPrecompile.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\MultiviewPrecompile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\PagedMultiviewTreeControl\ContextMenu.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\ContextMenu.cpp">
       <Filter>NodeTreeStuff</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\PagedMultiviewTreeControl\DLG_TreeNodeText.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\DLG_TreeNodeText.cpp">
       <Filter>NodeTreeStuff</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\PagedMultiviewTreeControl\XMLTagView.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\XMLTagView.cpp">
       <Filter>NodeTreeStuff</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\PagedMultiviewTreeControl\MultiViewApp.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\MultiViewApp.cpp">
       <Filter>MultiView</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\GlobalCode_IniData\IniDataV2.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\GlobalCode_IniData\IniDataV2.cpp">
       <Filter>Source Files\GlobalCode</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\GlobalCode_VariableLists\VariableVectorFunctions.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\GlobalCode_VariableLists\VariableVectorFunctions.cpp">
       <Filter>Source Files\GlobalCode</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\GlobalCode_VariableLists\VariableTypeLists.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\GlobalCode_VariableLists\VariableTypeLists.cpp">
       <Filter>Source Files\GlobalCode</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\GlobalCode_VariableConversionFunctions\VariableConversionFunctions.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\GlobalCode_VariableConversionFunctions\VariableConversionFunctions.cpp">
       <Filter>Source Files\GlobalCode</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\GlobalCode_VariableLists\StringVectorList.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\GlobalCode_VariableLists\StringVectorList.cpp">
       <Filter>Source Files\GlobalCode</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\GlobalCode_StringFunctions\StringFunctions.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\GlobalCode_StringFunctions\StringFunctions.cpp">
       <Filter>Source Files\GlobalCode</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\GlobalCode_QuadVector\QuadVectorFunctions.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\GlobalCode_QuadVector\QuadVectorFunctions.cpp">
       <Filter>Source Files\GlobalCode</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\GlobalCode_QuadVector\QuadVector.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\GlobalCode_QuadVector\QuadVector.cpp">
       <Filter>Source Files\GlobalCode</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\PagedMultiviewTreeControl\TreePage.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\TreePage.cpp">
       <Filter>Header Files</Filter>
     </ClCompile>
-    <ClCompile Include="$(CPPSource)\GlobalCode_ExperimentalCode\MediumDec.cpp">
+    <ClCompile Include="$(BlazesGlobalCode)\GlobalCode_ExperimentalCode\MediumDec.cpp">
       <Filter>Source Files\GlobalCode</Filter>
     </ClCompile>
     <ClCompile Include="..\GlobalCode_NodeTrees\TagNodeTreeTemplate.cpp">
@@ -122,139 +122,139 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="$(CPPSource)\GlobalCode_StringFunctions\StringFunctions.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_StringFunctions\StringFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_VariableLists\StringVectorList.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_VariableLists\StringVectorList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\CustomTreeCtrl.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\CustomTreeCtrl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\TemplateMacros.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\TemplateMacros.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\TreeCtrlPage.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\TreeCtrlPage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\AboutDlg.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\AboutDlg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\BasicMultiviewTemplate.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\BasicMultiviewTemplate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\MainFrm.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\MainFrm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\MultiViewDoc.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\MultiViewDoc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\OtherView.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\OtherView.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\Resource.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\MultiviewPrecompile.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\MultiviewPrecompile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_IniData\IndexedDictionary.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_IniData\IndexedDictionary.h">
       <Filter>Header Files\GlobalCode</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_IniData\IndexedPDictionary.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_IniData\IndexedPDictionary.h">
       <Filter>Header Files\GlobalCode</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_IniData\IniDataV2.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_IniData\IniDataV2.h">
       <Filter>Header Files\GlobalCode</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_IniData\CustomOrderedDictionary.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_IniData\CustomOrderedDictionary.h">
       <Filter>Header Files\GlobalCode</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_IniData\CustomDictionary.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_IniData\CustomDictionary.h">
       <Filter>Header Files\GlobalCode</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_ExperimentalCode\MediumDec.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_ExperimentalCode\MediumDec.h">
       <Filter>Header Files\GlobalCode</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\WP_APPDefines.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\WP_APPDefines.h">
       <Filter>NodeTreeStuff</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\HalfPagedMultiview.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\HalfPagedMultiview.h">
       <Filter>NodeTreeStuff</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\CustomTreeView.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\CustomTreeView.h">
       <Filter>NodeTreeStuff</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\ContextMenu.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\ContextMenu.h">
       <Filter>NodeTreeStuff</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\XMLTagViewNode.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\XMLTagViewNode.h">
       <Filter>NodeTreeStuff</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\GenericFrameView.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\GenericFrameView.h">
       <Filter>NodeTreeStuff</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\LinkedTreeView.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\LinkedTreeView.h">
       <Filter>NodeTreeStuff</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\MFView.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\MFView.h">
       <Filter>NodeTreeStuff</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\XMLTagView.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\XMLTagView.h">
       <Filter>NodeTreeStuff</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\CustomTreeNode.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\CustomTreeNode.h">
       <Filter>NodeTreeStuff</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\MultiViewApp.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\MultiViewApp.h">
       <Filter>MultiView</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\TreePage.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\TreePage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_IniData\PointerDictionary.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_IniData\PointerDictionary.h">
       <Filter>Header Files\GlobalCode</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_IniData\OrderedPointerDictionary.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_IniData\OrderedPointerDictionary.h">
       <Filter>Header Files\GlobalCode</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\DLLAPI.h">
+    <ClInclude Include="$(BlazesGlobalCode)\DLLAPI.h">
       <Filter>Header Files\GlobalCode</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\TreePageNode.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\TreePageNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_QuadVector\QuadVector.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_QuadVector\QuadVector.h">
       <Filter>Header Files\GlobalCode</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_QuadVector\QuadVectorFunctions.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_QuadVector\QuadVectorFunctions.h">
       <Filter>Header Files\GlobalCode</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\tsl\ordered_map.h">
+    <ClInclude Include="$(BlazesGlobalCode)\tsl\ordered_map.h">
       <Filter>TSL</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\tsl\ordered_hash.h">
+    <ClInclude Include="$(BlazesGlobalCode)\tsl\ordered_hash.h">
       <Filter>TSL</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\tsl\ordered_set.h">
+    <ClInclude Include="$(BlazesGlobalCode)\tsl\ordered_set.h">
       <Filter>TSL</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\DLG_TreeNodeText.h">
+    <ClInclude Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\DLG_TreeNodeText.h">
       <Filter>NodeTreeStuff</Filter>
     </ClInclude>
     <ClInclude Include="BasicXMLNode.h">
       <Filter>NodeTreeStuff</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_VariableLists\VariableList.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_VariableLists\VariableList.h">
       <Filter>Header Files\GlobalCode</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_VariableConversionFunctions\VariableConversionFunctions.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_VariableConversionFunctions\VariableConversionFunctions.h">
       <Filter>Header Files\GlobalCode</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_VariableLists\VariableTypeLists.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_VariableLists\VariableTypeLists.h">
       <Filter>Header Files\GlobalCode</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_VariableLists\VariableVectorFunctions.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_VariableLists\VariableVectorFunctions.h">
       <Filter>Header Files\GlobalCode</Filter>
     </ClInclude>
     <ClInclude Include="..\GlobalCode_NodeTrees\LooseNodeTreeTemplate.h">
@@ -263,7 +263,7 @@
     <ClInclude Include="..\GlobalCode_NodeTrees\TagNodeTreeTemplate.h">
       <Filter>NodeTreeStuff\OldNodeTreeCode</Filter>
     </ClInclude>
-    <ClInclude Include="$(CPPSource)\GlobalCode_NodeTrees\VariableData.h">
+    <ClInclude Include="$(BlazesGlobalCode)\GlobalCode_NodeTrees\VariableData.h">
       <Filter>NodeTreeStuff\OldNodeTreeCode</Filter>
     </ClInclude>
     <ClInclude Include="..\GlobalCode_NodeTrees\XMLOption.h">
@@ -304,23 +304,23 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="$(CPPSource)\PagedMultiviewTreeControl\res\MultiView.ico">
+    <Image Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\res\MultiView.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="$(CPPSource)\PagedMultiviewTreeControl\res\MultiViewDoc.ico">
+    <Image Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\res\MultiViewDoc.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="$(CPPSource)\PagedMultiviewTreeControl\res\Toolbar.bmp">
+    <Image Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\res\Toolbar.bmp">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="$(CPPSource)\PagedMultiviewTreeControl\res\MultiView.rc2">
+    <CustomBuild Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\res\MultiView.rc2">
       <Filter>Resource Files</Filter>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="$(CPPSource)\PagedMultiviewTreeControl\MultiView.rc">
+    <ResourceCompile Include="$(BlazesGlobalCode)\PagedMultiviewTreeControl\MultiView.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
