-More preset values -Fixes applied for normal operations(still can't get NthRoot calculations working correctly with MediumDec) -Some Floating operation code added -Changed debug tests -ToString now doesn't convert unneeded zeros from decimalhalf -Integer power code working now for MediumDec (non-whole number version not working yet)

--- a/ExprFormulaTester/ExprFormulaTester.vcxproj.filters
+++ b/ExprFormulaTester/ExprFormulaTester.vcxproj.filters
@@ -71,5 +71,17 @@
     <ClInclude Include="..\GlobalCode\AltNum\MediumDec.hpp">
       <Filter>Header Files\AltNum</Filter>
     </ClInclude>
+    <ClInclude Include="..\GlobalCode\AltNum\AltNumDebug.hpp">
+      <Filter>Header Files\AltNum</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode\AltNum\FloatingOperations.hpp">
+      <Filter>Header Files\AltNum</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode\AltNum\MediumDec_Math.hpp">
+      <Filter>Header Files\AltNum</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode\AltNum\ModCheckerXX.hpp">
+      <Filter>Header Files\AltNum</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
