--- a/ExprFormulaTester/ExprFormulaTester.vcxproj
+++ b/ExprFormulaTester/ExprFormulaTester.vcxproj
@@ -159,7 +159,11 @@
     <ClCompile Include="ExprFormulaTester.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\GlobalCode\AltNum\AltNumDebug.hpp" />
+    <ClInclude Include="..\GlobalCode\AltNum\FloatingOperations.hpp" />
     <ClInclude Include="..\GlobalCode\AltNum\MediumDec.hpp" />
+    <ClInclude Include="..\GlobalCode\AltNum\MediumDec_Math.hpp" />
+    <ClInclude Include="..\GlobalCode\AltNum\ModCheckerXX.hpp" />
     <ClInclude Include="..\GlobalCode\Databases\AltDecFormula.h" />
     <ClInclude Include="..\GlobalCode\Databases\CustomDictionary.h" />
     <ClInclude Include="..\GlobalCode\Databases\CustomOrderedDictionary.h" />
